Safari is not able to adapt between H264 streams with EditList and without EditList https://bugs.webkit.org/show_bug.cgi?id=190638 <rdar://problem/45342208>

Reviewed by Eric Carlson.

Source/WebCore:

Test: media/media-source/media-source-append-overlapping-dts.html

The MSE frame replacement algorithm does not take decode timestamps into account; this can
lead to situations where the replacement algorithm may leave in place frames where the
presentationTimestamp is less than the replacement frame, but whose decodeTimestamp is
after the replacement frame. When re-enqueuing these frames, they may cause a decode error
if they break the group-of-pictures sequence of the replaced range.

* Modules/mediasource/SampleMap.cpp:
(WebCore::DecodeOrderSampleMap::findSamplesBetweenDecodeKeys):
* Modules/mediasource/SampleMap.h:
* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::sourceBufferPrivateDidReceiveSample):

LayoutTests:

* media/media-source/media-source-append-overlapping-dts-expected.txt: Added.
* media/media-source/media-source-append-overlapping-dts.html: Added.


Canonical link: https://commits.webkit.org/205636@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237271 268f45cc-cd09-0410-ab3c-d52691b4dbfc